[gd_scene load_steps=3 format=3 uid="uid://c2nrk2wlmduod"]

[ext_resource type="Script" uid="uid://1clceqq4yny7" path="res://scripts/ui/MainMenuController.gd" id="1_mainmenu"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 32
font_color = Color(0.9, 0.9, 1, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mainmenu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.2, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GEOPARDY!"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="LoadDataButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Load Game Data"

[node name="HostReferenceButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Reference View"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="IPContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IPLabel" type="Label" parent="VBoxContainer/IPContainer"]
layout_mode = 2
text = "Server IP:"

[node name="IPInput" type="LineEdit" parent="VBoxContainer/IPContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "192.168.1.100"

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Ready to play"
horizontal_alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(800, 600)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.json ; JSON Game Data")
